Update running-the-metabase-jar-file.md